AP-17283: Implement file based object transfer for old kernel
AP-17283 (Implement file-based transfer of pickled objects)

Currently only handled on Java side, if time permits we should also
implement the reading and writing on Python side for efficiency.